Fixed header file path + rerender

--- a/index.Rmd
+++ b/index.Rmd
@@ -866,7 +866,7 @@ plot_sp500 <- sp500 %>%
     subtitle = "(with Loess smoothed trendline)",
     x = "Year",
     y = "Hours\n",
-    caption = "Data Source: Yahoo Finance, BLS”"
+    caption = "Data Source: Yahoo Finance, BLS"
   ) + 
   theme(legend.position = "none")+
   annotate(
@@ -981,7 +981,7 @@ plot_ceo_ratio <- read_csv("data/ceo_comp.csv") %>%
     subtitle = "(with Loess smoothed trendline)",
     x = "Year",
     y = "Ratio\n",
-    caption = "Data Source: Economic Policy Institute”"
+    caption = "Data Source: Economic Policy Institute"
   ) +
   annotate(
     "text",
@@ -1151,11 +1151,11 @@ plot_top10_incomeshare <- read_csv("data/fct_income_distro.csv") %>%
   scale_x_continuous(breaks = seq(1900,2020,20))+
   scale_y_continuous(labels = scales::percent)+
   labs(
-    title = "Share of total income by top 10% earners 1917-1998",
+    title = "Share of total income by top 10% earners 1913-2019",
     subtitle = "(with Loess smoothed trendline)",
     x = "Year",
     y = "% Share of total \n",
-    caption = "Data Source: Piketty and Saez, 2003”"
+    caption = "Data Source: Piketty and Saez, 2019"
   ) +
   annotate(
     "text",
